# trino-poc

java/: .gitignore  CMakeLists.txt  README.md  pom.xml
java/trino-velox/: CMakeLists.txt  README.md  pom.xml
java/trino-velox/src/main/cpp/: id_to_module_map.h  jni_common.cc  symbols.map  velox_task.cc  velox_task.h
java/trino-velox/src/main/java/io/trino/poc/evaluator/: Evaluator.java  JniLoader.java  JniWrapper.java
java/trino-velox/src/main/java/io/trino/velox/: JniLoader.java  Task.java  TaskJniWrapper.java
java/trino-velox/src/test/java/io/trino/poc/evaluator/: EvaluatorTest.java
java/trino-velox/src/test/java/io/trino/velox/: TaskTest.java
java/trino-velox/src/test/resources/: logback.xml
